--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 A_Smarter_Way_to_Learn_Python/Evidences
+A_Smarter_Way_to_Learn_Python/Deliverables
 A_Smarter_Way_to_Learn_Python/A_Smarter_Way_to_Learn_Python.pdf
+/**/*.pdf
+/**/*.html
+A_Smarter_Way_to_Learn_Python/Exercises/99_Template.ipynb
